fix page header alignment

--- a/search/css/results-overrides.css
+++ b/search/css/results-overrides.css
@@ -20,7 +20,7 @@
         height: 90px;
     }
     .page-header h1 {
-        text-align: center;
+        /* text-align: center; */
         padding-left: initial;
     }
 }
